--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,16 @@
-:root{
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 
+
+:root{
+    --minders-yellow: #FFC500;
+    --main-heading-size: 3rem;
+    --titles-size: 1.75rem;
+    --text-size: 1.15rem;
 }
 
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
