--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,66 @@
 body{
     background-color: black;
     color: white;
-    text-align: start;
-    unicode-bidi: plaintext;
+    width: 100%;
+    margin: auto;
 }
 
+section{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    margin-bottom: 7rem;
+}
+
+h1{
+    font-size: var(--main-heading-size);
+    color: var(--minders-yellow);
+    margin: 0.5rem 0;
+    text-transform: uppercase;
+}
+
+h2{
+    font-size: var(--titles-size);
+    margin-bottom: 0;
+}
+
+p{
+    font-size: var(--text-size);
+    font-weight: 300;
+}
+
+.intro{
+    align-items: center;
+    position: relative;
+    padding: 10rem 0;
+}
+
+.intro img{
+    width: 90%;
+}
+
+.top-wave{
+    width: 100% !important;
+    position: absolute;
+    transform: rotate(180deg);
+    top: 0;
+    left: 0;
+}
+
+.about-us{
+    position: relative;
+}
+
+.our-values ul li{
+    font-size: var(--text-size);
+    font-weight: 300;
+}
+
+.lamp{
+    position: absolute;
+    width: 100%;
+    opacity: 30%;
+    z-index: -1;
+    left: -40%;
+    bottom: -80px;
+}
