--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,13 @@ section{
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    margin-bottom: 7rem;
+    margin-bottom: 5rem;
+}
+
+section > div,
+section h1{
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 h1{
@@ -17,6 +23,11 @@ h1{
     color: var(--minders-yellow);
     margin: 0.5rem 0;
     text-transform: uppercase;
+    padding: 0;
+}
+
+.about-us-heading {
+    padding: 0;
 }
 
 h2{
@@ -33,15 +44,19 @@ p{
     align-items: center;
     position: relative;
     padding: 10rem 0;
+    margin-bottom: 0;
 }
 
 .intro img{
     width: 90%;
 }
 
-.top-wave{
+.top-wave, .bottom-wave{
     width: 100% !important;
     position: absolute;
+}
+
+.top-wave {
     transform: rotate(180deg);
     top: 0;
     left: 0;
@@ -63,4 +78,34 @@ p{
     z-index: -1;
     left: -40%;
     bottom: -80px;
+}
+
+.final {
+    position: relative;
+    margin-bottom: 0;
+}
+
+.bottom-wave {
+    bottom: 0;
+    right: 0;
+}
+
+.article {
+    margin-bottom: 0;
+}
+
+.committees {
+    position: relative;
+}
+
+.dots {
+    position: absolute;
+    top: 5%;
+    left: 0;
+    width: 50vw;
+    z-index: -1;
+}
+
+.committee-name {
+    color: var(--minders-yellow);
 }
